added new model

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,64 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from data_loader import SatelliteTimeSeriesDataset, train_test_split\n",
-    "from supervised_model import DeformableNCC, training_loop\n",
-    "from unsupervised_dtw_clustering import DTWClustering, dtw_distance\n",
-    "from evaluate_and_visualize import evaluate_supervised, evaluate_clustering, plot_prototype_reconstruction, plot_dtw_alignment\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing regions: 100%|██████████| 2/2 [00:00<00:00, 11.46it/s]\n",
-      "Loading time series: 100%|██████████| 2/2 [00:12<00:00,  6.21s/it]\n",
-      "Processing regions: 100%|██████████| 2/2 [00:00<00:00, 42.18it/s]\n",
-      "Loading time series: 100%|██████████| 2/2 [00:09<00:00,  4.70s/it]\n",
-      "Processing regions: 100%|██████████| 2/2 [00:00<00:00, 99.30it/s]\n",
-      "Loading time series: 100%|██████████| 2/2 [00:08<00:00,  4.23s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ===== Data Loading =====\n",
-    "from data_loader import SatelliteTimeSeriesDataset, train_test_split\n",
-    "\n",
-    "data_root = \"/Users/ludoviclepic/Downloads/TimeSen2Crop-2echantillon\"\n",
-    "dataset = SatelliteTimeSeriesDataset(data_root, normalize=True)\n",
-    "train_set, test_set = train_test_split(dataset, test_fraction=0.2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ===== Prepare DataLoader for Supervised Model =====\n",
-    "train_tensor = torch.tensor(train_set.data, dtype=torch.float32)\n",
-    "train_labels = torch.tensor(train_set.labels, dtype=torch.long)\n",
-    "train_dataset = TensorDataset(train_tensor, train_labels)\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -67,116 +9,82 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Supervised Training Epochs:   5%|▌         | 1/20 [02:31<47:57, 151.45s/it]"
+      "/Users/ludoviclepic/Documents/MINES/3A/MVA/IAEnv/MiniProjet/venv/lib/python3.12/site-packages/tslearn/bases/bases.py:15: UserWarning: h5py not installed, hdf5 features will not be supported.\n",
+      "Install h5py to use hdf5 features: http://docs.h5py.org/\n",
+      "  warn(h5py_msg)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/20, Loss: 0.0895\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  10%|█         | 2/20 [05:01<45:12, 150.69s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/20, Loss: 0.0219\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  15%|█▌        | 3/20 [08:01<46:30, 164.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/20, Loss: 0.0213\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  20%|██        | 4/20 [11:23<47:45, 179.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/20, Loss: 0.0215\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  25%|██▌       | 5/20 [14:16<44:09, 176.65s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/20, Loss: 0.0213\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  30%|███       | 6/20 [17:26<42:20, 181.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/20, Loss: 0.0213\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Supervised Training Epochs:  35%|███▌      | 7/20 [20:46<40:37, 187.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/20, Loss: 0.0214\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
     }
    ],
    "source": [
-    "# ===== Supervised Model =====\n",
-    "from supervised_model import DeformableNCC, training_loop\n",
-    "num_classes = len(train_set.class_names)\n",
-    "series_length = train_set.data.shape[1]\n",
-    "num_bands = train_set.data.shape[2]\n",
-    "model = DeformableNCC(num_classes, series_length, num_bands)\n",
-    "model.class_names = train_set.class_names\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import importlib\n",
     "\n",
-    "training_loop(model, train_loader, num_epochs=20, lr=1e-3, mu=1.0, nu=0.01)\n"
+    "import data_loader\n",
+    "import model\n",
+    "\n",
+    "importlib.reload(data_loader)\n",
+    "importlib.reload(model)\n",
+    "\n",
+    "from data_loader import get_data_splits\n",
+    "from model import NearestNeighborDTW, KMeansSoftDTW\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'acquisition_date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m root_dir = \u001b[33m\"\u001b[39m\u001b[33m/Users/ludoviclepic/Downloads/TimeSen2Crop-2echantillon\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mload_all_tiles_and_save_npy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout_npy_prefix\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtimesen2crop\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/MINES/3A/MVA/IAEnv/MiniProjet/data_loader.py:172\u001b[39m, in \u001b[36mload_all_tiles_and_save_npy\u001b[39m\u001b[34m(root_dir, out_npy_prefix, train_ratio, val_ratio, test_ratio, random_seed)\u001b[39m\n\u001b[32m    170\u001b[39m all_labels = []\n\u001b[32m    171\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m tile_d \u001b[38;5;129;01min\u001b[39;00m tile_dirs:\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m     tile_data, tile_labels = \u001b[43mparse_one_tile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtile_d\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    173\u001b[39m     all_data.extend(tile_data)\n\u001b[32m    174\u001b[39m     all_labels.extend(tile_labels)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/MINES/3A/MVA/IAEnv/MiniProjet/data_loader.py:122\u001b[39m, in \u001b[36mparse_one_tile\u001b[39m\u001b[34m(tile_dir)\u001b[39m\n\u001b[32m    119\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNo dates.csv found in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtile_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    121\u001b[39m \u001b[38;5;66;03m# The user’s dataset has \"YYYYMMDD\" rows presumably\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m122\u001b[39m tile_dates = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull_dates_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheader\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    124\u001b[39m data_list = []\n\u001b[32m    125\u001b[39m label_list = []\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'acquisition_date'"
+     ]
+    }
+   ],
+   "source": [
+    "root_dir = \"/Users/ludoviclepic/Downloads/TimeSen2Crop-2echantillon\"\n",
+    "load_all_tiles_and_save_npy(root_dir, out_npy_prefix=\"timesen2crop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'timesen2crop_X_train.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m train_dataset = \u001b[43mNpyTimeSeriesDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtimesen2crop_X_train.npy\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtimesen2crop_y_train.npy\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m val_dataset   = NpyTimeSeriesDataset(\u001b[33m\"\u001b[39m\u001b[33mtimesen2crop_X_val.npy\u001b[39m\u001b[33m\"\u001b[39m,   \u001b[33m\"\u001b[39m\u001b[33mtimesen2crop_y_val.npy\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m test_dataset  = NpyTimeSeriesDataset(\u001b[33m\"\u001b[39m\u001b[33mtimesen2crop_X_test.npy\u001b[39m\u001b[33m\"\u001b[39m,  \u001b[33m\"\u001b[39m\u001b[33mtimesen2crop_y_test.npy\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/MINES/3A/MVA/IAEnv/MiniProjet/data_loader.py:215\u001b[39m, in \u001b[36mNpyTimeSeriesDataset.__init__\u001b[39m\u001b[34m(self, x_npy_path, y_npy_path)\u001b[39m\n\u001b[32m    214\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, x_npy_path: \u001b[38;5;28mstr\u001b[39m, y_npy_path: \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m215\u001b[39m     \u001b[38;5;28mself\u001b[39m.X = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_npy_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    216\u001b[39m     \u001b[38;5;28mself\u001b[39m.y = np.load(y_npy_path)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/MINES/3A/MVA/IAEnv/MiniProjet/venv/lib/python3.12/site-packages/numpy/lib/_npyio_impl.py:459\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[39m\n\u001b[32m    457\u001b[39m     own_fid = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    458\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m459\u001b[39m     fid = stack.enter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m    460\u001b[39m     own_fid = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    462\u001b[39m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'timesen2crop_X_train.npy'"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset = NpyTimeSeriesDataset(\"timesen2crop_X_train.npy\", \"timesen2crop_y_train.npy\")\n",
+    "val_dataset   = NpyTimeSeriesDataset(\"timesen2crop_X_val.npy\",   \"timesen2crop_y_val.npy\")\n",
+    "test_dataset  = NpyTimeSeriesDataset(\"timesen2crop_X_test.npy\",  \"timesen2crop_y_test.npy\")\n",
+    "\n",
+    "X_train, y_train = train_dataset.X, train_dataset.y\n",
+    "X_val,   y_val   = val_dataset.X,   val_dataset.y\n",
+    "X_test,  y_test  = test_dataset.X,  test_dataset.y\n",
+    "\n",
+    "print(\"Train shape:\", X_train.shape, y_train.shape)\n",
+    "print(\"Val   shape:\", X_val.shape,   y_val.shape)\n",
+    "print(\"Test  shape:\", X_test.shape,  y_test.shape)"
    ]
   },
   {
